plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

def javafxVersion = '21'

dependencies {
    implementation "org.openjfx:javafx-controls:${javafxVersion}"
    implementation "org.openjfx:javafx-fxml:${javafxVersion}"
}

application {
    mainClass = 'com.syafiqriza.rushhoursolver.Main'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

run {
    doFirst {
        jvmArgs = [
                "--module-path", classpath.asPath,
                "--add-modules", "javafx.controls,javafx.fxml"
        ]
    }
}
